FIX: remove scrollbar

--- a/src/scss/settings/_common.scss
+++ b/src/scss/settings/_common.scss
@@ -7,7 +7,7 @@ html, body {
     text-rendering: optimizeLegibility;
     scroll-behavior: smooth;
     ::-webkit-scrollbar {
-        width: 0px;
+        display: none;
     }
 }
 main {
